// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component testing Is button with loader displayed correctly 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src={{}}
  />
</button>
`;

exports[`Button component testing Is button with text displayed correctly 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Какой-то текст
  </p>
</button>
`;

exports[`Button component testing Is button without text displayed correctly 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Button component testing Is disabled button displayed correctly 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;
